syntax = "proto3";

package ai.lzy.v1.worker;

import "ai/lzy/v1/common/operation.proto";
import "ai/lzy/v1/common/zygote.proto";

option java_outer_classname = "Worker";
option java_package = "ai.lzy.v1.worker";

service WorkerApi {
  rpc Configure (ConfigureRequest) returns (ConfigureResponse);
  rpc Execute (ExecuteRequest) returns (ExecuteResponse);
  rpc Stop (StopRequest) returns (StopResponse);
}

// ========== Configure ============

message ConfigureRequest {
  EnvSpec env = 1;
}

message ConfigureResponse {}

// ========== Execute ============

message ExecuteRequest {
  ai.lzy.v1.common.TaskDesc taskDesc = 1;
  string taskId = 2;
  string executionId = 3;
}

message ExecuteResponse {

}

// ========== Stop ============

message StopRequest {}
message StopResponse {}
